--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
       <script type="module" src="main.js"></script>
       <div>
         <h2>PM 2.5 readings</h2>
-        <p>The following are averages of the last few readings from each machine:</p>
+        <p>The following are averages of the last one hour of readings from each machine:</p>
       </div>
       <div id="insert-readings">
         <p><i>Loading data...
@@ -27,6 +27,7 @@
         <p class="unhealthy">Unhealthy</p>
         <p class="very-unhealthy">Very unhealthy</p>
         <p class="hazardous">Hazardous</p>
+        <p class="unavailable">No data</p>
       </div>
       <p>
         After the data has loaded, you can refresh the page for the latest readings.
