--- a/static/index.html
+++ b/static/index.html
@@ -14,13 +14,16 @@
         <p>The following are averages of the last one hour of readings from each machine:</p>
       </div>
       <div id="insert-readings">
-        <p><i>Loading data...
-          It may take a few moments for the data to load.
-          Do not refresh page.</i></p>
+        <div class="spinner-container">
+          <div class="spinner"></div>
+          <p><i>Loading data...
+            It may take a few moments for the data to load.
+            Do not refresh page.</i></p>
+        </div>
       </div>
       <br>
       <div class="key">
-        <h4 style="margin:5px 0px">Key:</h4>
+        <p class="title">Key:</p>
         <p class="good">Good air quality</p>
         <p class="moderate">Moderate</p>
         <p class="unhealthy-sensitive">Unhealthy for sensitive groups</p>
@@ -29,7 +32,7 @@
         <p class="hazardous">Hazardous</p>
         <p class="unavailable">No data</p>
       </div>
-      <p>
+      <p class="refresh-note">
         After the data has loaded, you can refresh the page for the latest readings.
       </p>
     </div>
